--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ DB_HOSTNAME=localhost
 DB_PORT=5432
 PORT=3000
 ENVIRONMENT=dev
+GOOGLE_APPLICATION_CREDENTIALS=C:\Users\IGNITER\Documents\ITK\Practice\Firebase\Firebase\firebase.json
