--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.3.0",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.27.0"
@@ -21,7 +22,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/jest": "^29.2.4",
-    "@types/node": "^18.11.13",
+    "@types/node": "^18.11.15",
     "@types/supertest": "^2.0.12",
     "concurrently": "^7.6.0",
     "jest": "^29.3.1",
